fix: sed command a expects \ followed by text

--- a/.github/actions/setup/iotdb12/action.yml
+++ b/.github/actions/setup/iotdb12/action.yml
@@ -50,31 +50,37 @@ runs:
               path: ${{ steps.base.outputs.cache-path }}
               key: ${{ steps.base.outputs.cache-key }}
 
-        - name: save old JAVA_HOME
-          id: old-java-home
+        - name: save old JAVA_HOME and PATH
+          id: old-env
           shell: bash
-          run: echo "oldJavaHome=$JAVA_HOME" >> $GITHUB_OUTPUT
+          run: |
+              echo "oldJavaHome=$JAVA_HOME" >> $GITHUB_OUTPUT
+              echo "oldPath=$PATH" >> $GITHUB_OUTPUT
 
         - uses: actions/setup-java@v4
           with:
               java-version: 8
               distribution: ${{ runner.os == 'macOS' && 'liberica' || 'temurin' }}
 
-        - name: restore old JAVA_HOME
+        - name: restore old JAVA_HOME and PATH
           id: java8-home
           shell: bash
-          run: echo "JAVA_HOME=${{ steps.old-java-home.outputs.oldJavaHome }}" >> $GITHUB_ENV
+          run: |
+              echo "JAVA_HOME=${{ steps.old-env.outputs.oldJavaHome }}" >> $GITHUB_ENV
+              echo "PATH=${{ steps.old-env.outputs.oldPath }}" >> $GITHUB_ENV
 
         - name: Add JAVA_HOME of Java 8 to IoTDB Scripts
           if: runner.os != 'Windows'
-          uses: ./.github/actions/edit
-          with:
-              paths: $IOTDB_ROOT/sbin/start-server.sh $IOTDB_ROOT/sbin/start-cli.sh
-              statements: 20a JAVA_HOME=$JAVA_HOME_8_${{ runner.arch }}
+          shell: bash
+          working-directory: ${{ steps.base.outputs.tool-path }}
+          run: |
+              perl -i -pe 'print "JAVA_HOME=$JAVA_HOME_8_${{ runner.arch }}\n" if $. == 20' sbin/start-server.sh
+              perl -i -pe 'print "JAVA_HOME=$JAVA_HOME_8_${{ runner.arch }}\n" if $. == 20' sbin/start-cli.sh
 
         - name: Add JAVA_HOME of Java 8 to IoTDB Scripts
           if: runner.os == 'Windows'
-          uses: ./.github/actions/edit
-          with:
-              paths: $IOTDB_ROOT/sbin/start-server.bat $IOTDB_ROOT/sbin/start-cli.bat
-              statements: 20a set JAVA_HOME=%JAVA_HOME_8_${{ runner.arch }}%
+          shell: bash
+          working-directory: ${{ steps.base.outputs.tool-path }}
+          run: |
+              perl -i -pe 'print "set JAVA_HOME=%JAVA_HOME_8_${{ runner.arch }}%\n" if $. == 20' sbin/start-server.bat
+              perl -i -pe 'print "set JAVA_HOME=%JAVA_HOME_8_${{ runner.arch }}%\n" if $. == 20' sbin/start-cli.bat
