--- a/docker/client/Dockerfile-no-maven
+++ b/docker/client/Dockerfile-no-maven
@@ -1,4 +1,4 @@
-FROM openjdk:11-jre-slim
+FROM openjdk:17-jdk-slim
 COPY ./target/iginx-client-0.9.0-SNAPSHOT/ /iginx_client/
 
 RUN mkdir -p /iginx_client/logs
