--- a/docker/onlyIginx-filestore/Dockerfile-iginx
+++ b/docker/onlyIginx-filestore/Dockerfile-iginx
@@ -1,9 +1,9 @@
-FROM maven:3-amazoncorretto-8 AS builder
+FROM maven:3-amazoncorretto-17 AS builder
 COPY . /root/iginx
 WORKDIR /root/iginx
 RUN mvn clean package -DskipTests -P-format -e
 
-FROM openjdk:11-jre-slim
+FROM openjdk:17-jdk-slim
 COPY --from=builder /root/iginx/core/target/iginx-core-0.9.0-SNAPSHOT /iginx
 
 # ports will be cast in run.bat
