--- a/pom.xml
+++ b/pom.xml
@@ -344,7 +344,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.12.4</version>
                     <configuration>
-                        <argLine>-Dfile.encoding=UTF-8 --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                        <argLine>-Dfile.encoding=UTF-8 --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
