--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -55,6 +55,10 @@ runs:
           name: Run Dameng Database container
           shell: wsl-run {0}
           run: |
+              ulimit -a
+              ulimit -n 65535
+              ulimit -u 16384
+              ulimit -a
               for port in ${{ inputs.ports }}; do
                 docker run -d -p $port:5236 --restart=always \
                   --name=${{ inputs.version }}-$port \
