--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -88,6 +88,7 @@ runs:
                     break
                   fi
                 done
-                echo "Logs for $port:"
-                docker logs ${{ inputs.version }}-$port
               done
+              docker ps
+              docker ps -a
+              
