fix readonly of dameng in windows

--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -72,7 +72,7 @@ runs:
         - if: runner.os == 'Windows'
           name: Verify Dameng Database is running
           id: dmContainerWin
-          shell: wsl-run {0}
+          shell: bash
           run: |
               docker ps
               sleep 10
