--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Standard Test Suite
+name: tests
 
 on:
     pull_request: # when a PR is opened or reopened
@@ -103,3 +103,30 @@ jobs:
             db-matrix: '["VectorDB"]'
             close-optimizer: "true"
             timeout-minutes: 360
+    analyze-required-check:
+        if: always()
+        needs: # List of jobs that must pass. Add more jobs if needed.
+            - unit-test
+            - unit-mds
+            - case-regression
+            - standalone-test
+            - standalone-test-no-optimizer
+            - db-ce
+            - db-ce-no-optimizer
+            - standalone-test-vectordb
+            - standalone-test-no-optimizer-vectordb
+            - db-ce-vectordb
+            - db-ce-no-optimizer-vectordb
+            - remote-test
+            - assembly-test
+            - free-thread-test
+            - tpc-h-regression-test
+            - tpc-h-regression-test-no-optimizer
+            - tpc-h-regression-test-vectordb
+            - tpc-h-regression-test-no-optimizer-vectordb
+        runs-on: ubuntu-latest
+        steps:
+            - name: Decide whether the needed jobs succeeded or failed
+              uses: re-actors/alls-green@release/v1
+              with:
+                  jobs: ${{ toJSON(needs) }}
