add upsert sql of dameng

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -66,10 +66,10 @@ delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
 jdbc_need_quote=false
 
 # upsert语句中间部分
-upsert_statement=
+upsert_statement = WHEN MATCHED THEN UPDATE SET
 
 # upsert语句后面部分格式
-upsert_conflict_statement=
+upsert_conflict_statement= %s.%s = source.%s
 
 # 获取数据库列表的SQL语句
 database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
