--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -85,3 +85,20 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc\u5143\u6570\u636E\u83B7\u53D6\u662F\u5426\u652F\u6301\u7279\u6B8A\u5B57\u7B26\u8BC6\u522B
 jdbc_support_special_char=false
+
+# \u914D\u7F6EDameng DataTypeTransformer
+TINYINT=IGinX-BOOLEAN
+SMALLINT=IGinX-INTEGER
+MEDIUMINT=IGinX-INTEGER
+INT=IGinX-INTEGER
+BIGINT=IGinX-LONG
+INTEGER=IGinX-INTEGER
+FLOAT=IGinX-FLOAT
+DOUBLE=IGinX-DOUBLE
+DECIMAL=IGinX-DOUBLE
+
+IGinX-INTEGER=INTEGER
+IGinX-FLOAT=FLOAT(12,6)
+IGinX-DOUBLE=DOUBLE(22,11)
+IGinX-BOOLEAN=TINYINT
+IGinX-LONG=BIGINT
