feat(relational): add Dameng (#587)

--- a/.github/actions/edit/action.yml
+++ b/.github/actions/edit/action.yml
@@ -13,4 +13,5 @@ runs:
     steps:
         - name: "edit"
           shell: bash
-          run: sed -i"" -e "${{ inputs.statements }}" ${{ inputs.paths }}
+          run: |
+              sed -i"" -e "${{ inputs.statements }}" ${{ inputs.paths }}
