--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -219,6 +219,13 @@ runs:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
               statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql.*$|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false|g
 
+        - if: inputs.DB-name == 'Dameng'
+          name: Change Dameng Config
+          uses: ./.github/actions/edit
+          with:
+              paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
+              statements: s/^#storageEngineList=127.0.0.1#5236#relational#engine=dameng/storageEngineList=127.0.0.1#5236#relational#engine=dameng/g
+
         - if: inputs.DB-name == 'VectorDB'
           name: Change VectorDB Config
           uses: ./.github/actions/edit
