--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -29,6 +29,10 @@ inputs:
         description: "Redis ports"
         required: false
         default: 6379
+    Dameng-ports:
+        description: "Dameng ports"
+        required: false
+        default: 5236
     VectorDB-ports:
         description: "VectorDB ports"
         required: false
@@ -140,3 +144,13 @@ runs:
               clean: false
               start: true
               ports: ${{ inputs.VectorDB-ports }}
+
+        - if: inputs.DB-name=='Dameng'
+          name: Setup DB
+          uses: ./.github/actions/setup/dameng
+
+        - if: inputs.DB-name=='Dameng'
+          name: Start Dameng Service
+          uses: ./.github/actions/service/dameng
+          with:
+              ports: ${{ inputs.Dameng-ports }}
