--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -27,7 +27,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Dameng"]'
             close-optimizer:
                 description: "Whether to close the optimizer"
                 type: string
@@ -42,7 +42,7 @@ on:
                 description: "The database which support agg push down"
                 type: string
                 required: false
-                default: '["PostgreSQL"， "MYSQL"]'
+                default: '["PostgreSQL", "MYSQL", "Dameng"]'
 
 jobs:
     TPC-H-Test:
