--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -18,50 +18,74 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# 配置MySQL META以供JDBCMeta读取
+# 配置Dameng META以供JDBCMeta读取
 
 # 驱动类
-driver_class=com.oceanbase.jdbc.Driver
+driver_class=dm.jdbc.driver.DmDriver
+
 # 默认数据库
-default_database=oceanbase
+default_database=SYSDBA
+
 # 系统数据库，用于过滤
-system_databases=test,mysql,information_schema
+system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
+
 # 用于包裹表名和字段名的引号
-quote=`
+quote="
+
 # 删除数据库的SQL语句
-drop_database_statement=DROP DATABASE IF EXISTS %s;
-# 创建数据库的SQL语句
-create_database_statement=CREATE DATABASE %s;
+drop_database_statement=DROP SCHEMA IF EXISTS %s cascade;
+
+# 创建数据库
+create_database_statement=CREATE SCHEMA %s;
+
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+
 # 增加表字段
-alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
+alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
+
 # 删除表字段
-alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s;
-# 查询表
-query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
-#
-query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
-# 删除表数据
-delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d);
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
+
+# 查询表数据
+query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
+
+# 查询表数据（无主键）
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
+
+# 插入表数据
+insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
+
+# 更新表数据
+update_table_statement = UPDATE %s SET %s WHERE %s = %s
+
+# 删除表数据（这里保留 NULL 处理方式）
+delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
+
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
+
 # upsert语句中间部分
-upsert_statement= ON DUPLICATE KEY UPDATE
+upsert_statement = WHEN MATCHED THEN UPDATE SET
+
 # upsert语句后面部分格式
-upsert_conflict_statement= %s = VALUES(%s)
+upsert_conflict_statement= %s.%s = source.%s
+
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
+database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
+
 # 是否支持full join
-is_support_full_join=false
-# filter中正则匹配的符号
-regex_like_symbol=REGEXP
+is_support_full_join=true
+
+# filter中正则匹配的符号（达梦使用 REGEXP）
+regex_like_symbol=REGEXP_LIKE
+
 # filter中不匹配正则表达式的符号
-not_regex_like_symbol=NOT REGEXP
-# jdbc元数据是否支持特殊字符的识别
+not_regex_like_symbol=NOT REGEXP_LIKE
+
+# jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
 
-# 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
@@ -72,10 +96,8 @@ FLOAT=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
 DECIMAL=IGinX-DOUBLE
 
-
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
