fix after rebase

--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -42,7 +42,8 @@ on:
                 description: "The database which support agg push down"
                 type: string
                 required: false
-                default: '["PostgreSQL", "MYSQL", "Dameng", "Oracle"]'
+                # TODO: add agg-push down for oracle
+                default: '["PostgreSQL", "MYSQL", "Dameng"]'
 
 jobs:
     TPC-H-Test:
