--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,23 +50,23 @@ jobs:
             os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["Dameng", "Oracle"]'
             timeout-minutes: 60
-    db-ce-no-mac-relational:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 120
-    db-ce-no-optimizer-no-mac-relational:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 120
-            close-optimizer: "true"
+#    db-ce-no-mac-relational:
+#        uses: ./.github/workflows/DB-CE.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            os-matrix: '["ubuntu-latest", "windows-latest"]'
+#            db-matrix: '["Dameng", "Oracle"]'
+#            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+#            timeout-minutes: 120
+#    db-ce-no-optimizer-no-mac-relational:
+#        uses: ./.github/workflows/DB-CE.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            os-matrix: '["ubuntu-latest", "windows-latest"]'
+#            db-matrix: '["Dameng", "Oracle"]'
+#            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+#            timeout-minutes: 120
+#            close-optimizer: "true"
 #    standalone-test-vectordb:
 #        uses: ./.github/workflows/standalone-test.yml
 #        with:
@@ -108,17 +108,17 @@ jobs:
 #        uses: ./.github/workflows/free-thread-test.yml
 #        with:
 #            metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test-no-optimizer:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
+#    tpc-h-regression-test:
+#        uses: ./.github/workflows/tpc-h.yml
+#        with:
+#            os-matrix: '["ubuntu-latest"]'
+#            metadata-matrix: '["zookeeper"]'
+#    tpc-h-regression-test-no-optimizer:
+#        uses: ./.github/workflows/tpc-h.yml
+#        with:
+#            os-matrix: '["ubuntu-latest"]'
+#            metadata-matrix: '["zookeeper"]'
+#            close-optimizer: "true"
 #    tpc-h-regression-test-vectordb:
 #        uses: ./.github/workflows/tpc-h.yml
 #        with:
@@ -151,14 +151,14 @@ jobs:
 #            - remote-test
 #            - assembly-test
 #            - free-thread-test
-            - tpc-h-regression-test
-            - tpc-h-regression-test-no-optimizer
+#            - tpc-h-regression-test
+#            - tpc-h-regression-test-no-optimizer
 #            - tpc-h-regression-test-vectordb
 #            - tpc-h-regression-test-no-optimizer-vectordb
             - standalone-test-no-mac-relational
             - standalone-test-no-optimizer-no-mac-relational
-            - db-ce-no-mac-relational
-            - db-ce-no-optimizer-no-mac-relational
+#            - db-ce-no-mac-relational
+#            - db-ce-no-optimizer-no-mac-relational
         runs-on: ubuntu-latest
         steps:
             - name: Decide whether the needed jobs succeeded or failed
