--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -60,7 +60,7 @@ insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
 update_table_statement = UPDATE %s SET %s WHERE %s = %s
 
 # 删除表数据（这里保留 NULL 处理方式）
-delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
+delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d)
 
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
@@ -72,7 +72,7 @@ upsert_statement = WHEN MATCHED THEN UPDATE SET
 upsert_conflict_statement= %s.%s = source.%s
 
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
+database_query_sql=SELECT username as DATNAME FROM dba_users
 
 # 是否支持full join
 is_support_full_join=true
@@ -99,5 +99,5 @@ DECIMAL=IGinX-DOUBLE
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
-IGinX-BOOLEAN=TINYINT
-IGinX-LONG=BIGINT
+IGinX-BOOLEAN=NUMBER(1)
+IGinX-LONG=NUMBER(19)
