--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -51,7 +51,7 @@ alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
 
 # 查询表数据（无主键）
-query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
 
 # 插入表数据
 insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
@@ -85,6 +85,8 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
+
+jdbc_support_get_table_name_from_result_set=true
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
