--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -24,7 +24,7 @@
 driver_class=oracle.jdbc.driver.OracleDriver
 
 # 默认数据库
-default_database=ORCLPDB
+default_database=ORCL
 
 # 系统数据库，用于过滤
 system_databases=SYS,SYSTEM,PDBADMIN,SYSRAC,XS$NULL,GSMCATUSER,MDDATA,SYSBACKUP,REMOTE_SCHEDULER_AGENT,GSMUSER,OJVMSYS,DIP,LBACSYS,SYSKM,DGPDB_INT,OUTLN,SYS$UMF,SYSDG,DBSNMP,APPQOSSYS,VECSYS,DBSFWUSER,GGSYS,ANONYMOUS,CTXSYS,DVSYS,DVF,AUDSYS,GSMADMIN_INTERNAL,GGSHAREDCAP,OLAPSYS,MDSYS,XDB,WMSYS
@@ -36,7 +36,7 @@ quote="
 drop_database_statement=DROP USER %s CASCADE
 
 # 创建数据库
-create_database_statement=CREATE USER %s
+create_database_statement=CREATE USER %s NO AUTHENTICATION QUOTA UNLIMITED ON SYSTEM
 
 # 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
@@ -85,6 +85,8 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
+
+jdbc_support_get_table_name_from_result_set=false
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
