--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -245,7 +245,7 @@ runs:
           uses: ./.github/actions/edit
           with:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
-              statements: s/^#storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=system#password=Oracle123#has_data=false/storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=system#password=Oracle123#has_data=false/g
+              statements: s/^#storageEngineList=127.0.0.1#1521#relational#engine=oracle/storageEngineList=127.0.0.1#1521#relational#engine=oracle/g
 
         - if: inputs.DB-name == 'FileSystem'
           name: Modify IGinX Config
