--- a/conf/config.properties
+++ b/conf/config.properties
@@ -47,7 +47,7 @@ storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_re
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=20000#data_db=1#dummy_db=0
 #storageEngineList=127.0.0.1#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000#topk=3
 #storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
-#storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=system#password=Oracle123#has_data=false
+#storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=system#password=ORCLPWD#has_data=false
 
 # ???????
 databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage,vectordb=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
