--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -61,9 +61,10 @@
             <version>1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.ojdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <version>19.3.0.0</version>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8-production</artifactId>
+            <version>23.7.0.25.01</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 
