--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -16,7 +16,7 @@ runs:
       shell: bash
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name ${{ inputs.version }}-$port -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite
+           docker run -d --name ${{ inputs.version }}-$port -p $port:1521 -e ORACLE_PDB=ORCL -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite
         done
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       name: Verify Oracle Database is running
@@ -41,7 +41,7 @@ runs:
       shell: wsl-run {0}
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name "${{ inputs.version }}-$port" -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite                
+           docker run -d --name "${{ inputs.version }}-$port" -p $port:1521 -e ORACLE_PDB=ORCL -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite                
         done
     - if: runner.os == 'Windows'
       name: Verify Oracle Database is running
