--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -8,7 +8,7 @@ inputs:
     java:
         description: "java version"
         required: false
-        default: 17
+        default: 8
     os:
         description: "running environment"
         required: false
@@ -123,7 +123,7 @@ runs:
           uses: actions/setup-java@v4
           with:
               java-version: ${{ inputs.java }}
-              distribution: "temurin"
+              distribution: ${{ runner.os == 'macOS' && matrix.java == '8' && 'liberica' || 'temurin' }}
               cache: "maven"
 
         - name: Check Java & Python Version
