--- a/docker/onlyIginx/Dockerfile-iginx
+++ b/docker/onlyIginx/Dockerfile-iginx
@@ -1,9 +1,9 @@
-FROM maven:3-amazoncorretto-17 AS builder
+FROM maven:3-amazoncorretto-8 AS builder
 COPY . /root/iginx
 WORKDIR /root/iginx
 RUN mvn clean package -DskipTests -P-format
 
-FROM openjdk:17-jdk-slim
+FROM openjdk:11-jre-slim
 COPY --from=builder /root/iginx/core/target/iginx-core-0.9.0-SNAPSHOT /iginx
 # 安装 Python 3.8, pip 并安装所需的 Python 包
 
