test: run all queries in each single TPC-H test

--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -26,8 +26,13 @@ runs:
           shell: bash -el {0}
           run: mvn test -q -Dtest=TPCHNewIT -DfailIfNoTests=false -P-format
 
+        - name: Show New IGinX Time Costs
+          if: inputs.status != 'ok'
+          shell: bash -el {0}
+          run: cat test/src/test/resources/tpch/runtimeInfo/newTimeCosts.txt
+
         - name: Show New IGinX log
-          if: failure() && inputs.status != 'ok'
+          if: (!success()) && inputs.status != 'ok'
           shell: bash
           run: cat iginx-*.log
 
@@ -52,6 +57,12 @@ runs:
           working-directory: IGinX
           run: mvn test -q -Dtest=SQLWarmupIT -DfailIfNoTests=false -P-format
 
+        - name: Show Old IGinX Time Costs
+          if: inputs.status != 'ok'
+          shell: bash -el {0}
+          working-directory: IGinX
+          run: cat test/src/test/resources/tpch/runtimeInfo/oldTimeCosts.txt
+
         - name: Run TPCH Test on Old IGinX
           if: inputs.status != 'ok'
           shell: bash -el {0}
@@ -65,7 +76,7 @@ runs:
               cp -f test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt ../test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt
 
         - name: Show Old IGinX log
-          if: failure() && inputs.status != 'ok'
+          if: (!success()) && inputs.status != 'ok'
           shell: bash
           working-directory: IGinX
           run: cat iginx-*.log
