feat(arrow): 继续优化 TPC-H 性能和预热 (#600)
* test tpch only

* avoid building Parallel Pipeline for no udf RowTransform

* avoid extra fetch async

* revert max_repetitions_num

* Revert "Update SQLWarmupIT.java"

This reverts commit e0cbe8cdccbbddf3f3cbace611ed996c6fb2e00c.

* Revert "fix: add TPCH Warmup repeats and records"

This reverts commit b1af7cfadcb721b94b341fbb7bab3e909f5235af.

* refactor: join physical planner

* refactor: arch of physical join

* feat: impl arrow NestedLoopJoin

* refactor: dedup physical join code

* refactor: remove selection from batch

* feat: lazy materialization of variable width vector for multi-join

* ci: skip show iginx logs if success

* fix: impl all method of Batch.java

* test: add log to show failed query timeout

* ci: warmup by SQLSessionIT

* Revert "ci: warmup by SQLSessionIT"

This reverts commit 2a697568c220e56fea66985fc1eac2e728dd9d0b.

* feat: avoid unnecessary materialization in join

* ci: increase warmup records

* fix: full-join output nullable field

* test: add type cast in warmup

* fix: memory leak

* fix: key filter

* fix: fast fail in warmup

* Revert "test tpch only"

This reverts commit bc68b9a8273730bd53ad2d6a3cdd3ccf3fc02d9a.

* format

* test dbce only

* test: run all queries in each single TPC-H test

* test: run all queries in each single TPC-H test

* test: more robust warmup.sql

* test: more robust warmup.sql

* test: decrease warmup records

* test: decrease warmup records

* fix: more influxdb query-concurrency for tpch

* fix: join result order

* fix: more influxdb query-concurrency for tpch

* fix: join result order

* Revert "fix: more influxdb query-concurrency for tpch"

This reverts commit 693c9ada48c89ce948098b14c2bd5220a2dc4109.

* test: less query concurrency for influxdb in TPC-H

* Revert "test dbce only"

This reverts commit 1cb2a3d4630aaff3f4fa694c168363f1ed405082.

--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -26,8 +26,13 @@ runs:
           shell: bash -el {0}
           run: mvn test -q -Dtest=TPCHNewIT -DfailIfNoTests=false -P-format
 
+        - name: Show New IGinX Time Costs
+          if: inputs.status != 'ok'
+          shell: bash -el {0}
+          run: cat test/src/test/resources/tpch/runtimeInfo/newTimeCosts.txt
+
         - name: Show New IGinX log
-          if: failure() && inputs.status != 'ok'
+          if: (!success()) && inputs.status != 'ok'
           shell: bash
           run: cat iginx-*.log
 
@@ -64,8 +69,14 @@ runs:
               cp -f test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt ../test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt
               cp -f test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt ../test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt
 
+        - name: Show Old IGinX Time Costs
+          if: inputs.status != 'ok'
+          shell: bash -el {0}
+          working-directory: IGinX
+          run: cat test/src/test/resources/tpch/runtimeInfo/oldTimeCosts.txt
+
         - name: Show Old IGinX log
-          if: failure() && inputs.status != 'ok'
+          if: (!success()) && inputs.status != 'ok'
           shell: bash
           working-directory: IGinX
           run: cat iginx-*.log
