re-impl non-dummy

--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -32,14 +32,12 @@ system_databases=SYS,SYSTEM,PDBADMIN,SYSRAC,XS$NULL,GSMCATUSER,MDDATA,SYSBACKUP,
 # 用于包裹表名和字段名的引号
 quote="
 
-# 删除数据库的SQL语句
-drop_database_statement=DROP USER %s CASCADE
-
-# 创建数据库
-create_database_statement=CREATE USER %s NO AUTHENTICATION QUOTA UNLIMITED ON SYSTEM
+support_create_database=false
 
 # 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+
+drop_table_statement=DROP TABLE IF EXISTS %s
 
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
@@ -72,7 +70,7 @@ upsert_statement = WHEN MATCHED THEN UPDATE SET
 upsert_conflict_statement= %s.%s = source.%s
 
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT username as DATNAME FROM dba_users
+database_query_sql=SELECT DISTINCT SUBSTR(table_name, 1, INSTR(table_name, '.') - 1) AS DATNAME FROM user_tables WHERE table_name LIKE 'unit%.%';
 
 # 是否支持full join
 is_support_full_join=true
