--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -72,6 +72,8 @@ upsert_conflict_statement= %s.%s = source.%s
 # 获取数据库列表的SQL语句
 database_query_sql=SELECT DISTINCT SUBSTR(table_name, 1, INSTR(table_name, '.') - 1) AS DATNAME FROM user_tables WHERE table_name LIKE 'unit%.%';
 
+dummy_database_query_sql=SELECT DISTINCT owner AS DATNAME FROM all_tables
+
 # 是否支持full join
 is_support_full_join=true
 
