--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,20 +36,20 @@ jobs:
 #        with:
 #            metadata-matrix: '["zookeeper"]'
 #            close-optimizer: "true"
-    standalone-test-no-mac-relational:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            timeout-minutes: 100
-    standalone-test-no-optimizer-no-mac-relational:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            timeout-minutes: 100
+#    standalone-test-no-mac-relational:
+#        uses: ./.github/workflows/standalone-test.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            os-matrix: '["ubuntu-latest", "windows-latest"]'
+#            db-matrix: '["Dameng", "Oracle"]'
+#            timeout-minutes: 100
+#    standalone-test-no-optimizer-no-mac-relational:
+#        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            os-matrix: '["ubuntu-latest", "windows-latest"]'
+#            db-matrix: '["Dameng", "Oracle"]'
+#            timeout-minutes: 100
     db-ce-no-mac-relational:
         uses: ./.github/workflows/DB-CE.yml
         with:
@@ -155,8 +155,8 @@ jobs:
 #            - tpc-h-regression-test-no-optimizer
 #            - tpc-h-regression-test-vectordb
 #            - tpc-h-regression-test-no-optimizer-vectordb
-            - standalone-test-no-mac-relational
-            - standalone-test-no-optimizer-no-mac-relational
+#            - standalone-test-no-mac-relational
+#            - standalone-test-no-optimizer-no-mac-relational
             - db-ce-no-mac-relational
             - db-ce-no-optimizer-no-mac-relational
         runs-on: ubuntu-latest
