--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -233,6 +233,13 @@ runs:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
               statements: s/^#storageEngineList=127.0.0.1#19530/storageEngineList=127.0.0.1#19530/g
 
+        - if: inputs.DB-name == 'Neo4j'
+          name: Change Neo4j Config
+          uses: ./.github/actions/edit
+          with:
+              paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
+              statements: s/^#storageEngineList=127.0.0.1#7687/storageEngineList=127.0.0.1#7687/g
+
         - if: inputs.DB-name == 'VectorDB'
           name: Change VectorDB Config
           uses: ./.github/actions/edit
