--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -37,6 +37,10 @@ inputs:
         description: "VectorDB ports"
         required: false
         default: 19530
+    Neo4j-ports:
+        description: "Neo4j ports"
+        required: false
+        default: 7687
 
 runs:
     using: "composite" # Mandatory parameter
@@ -154,3 +158,16 @@ runs:
           uses: ./.github/actions/service/dameng
           with:
               ports: ${{ inputs.Dameng-ports }}
+
+        - if: inputs.DB-name=='Neo4j'
+          name: Setup Neo4j DB
+          uses: ./.github/actions/setup/neo4j
+
+        - if: inputs.DB-name=='Neo4j'
+          name: Run Neo4j DB
+          uses: ./.github/actions/service/neo4j
+          with:
+              stop: false
+              clean: false
+              start: true
+              ports: ${{ inputs.Neo4j-ports }}
