--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Neo4j"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
@@ -90,6 +90,7 @@ jobs:
                   Redis-ports: 6379 6380 6381
                   VectorDB-ports: 19530 19531 19532
                   Dameng-ports: 5236 5237 5238
+                  Neo4j-ports: 7687 7688 7689
 
             - name: Install IGinX with Maven
               shell: bash
