--- a/dataSource/pom.xml
+++ b/dataSource/pom.xml
@@ -41,6 +41,7 @@
         <module>redis</module>
         <module>relational</module>
         <module>vectordb</module>
+        <module>neo4j</module>
     </modules>
 
     <properties>
