--- a/test/pom.xml
+++ b/test/pom.xml
@@ -70,6 +70,10 @@
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>vectordb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.edu.tsinghua</groupId>
+            <artifactId>neo4j</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
