--- a/conf/config.properties
+++ b/conf/config.properties
@@ -122,6 +122,8 @@ enablePushDown=true
 
 useStreamExecutor=false
 
+# 是否开启并行化算子
+enableParallelOperator=true
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
 # ParallelGroupBy触发行数
@@ -131,9 +133,12 @@ parallelApplyFuncGroupsThreshold=1000
 # ParallelGroupBy线程池大小
 parallelGroupByPoolSize=5
 # ParallelGroupBy线程池数量
-parallelGroupByPoolNum=5
-# ParallelGroupBy线程池数量
+parallelGroupByPoolNum=10
+# 流式ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
+
+# 分布式查询的触发分片数
+distributedQueryTriggerThreshold = 100
 
 ####################
 ### Migration 相关配置
