--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>dameng-jdbc</artifactId>
             <version>1.8-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8-production</artifactId>
+            <version>23.7.0.25.01</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
