--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -21,25 +21,23 @@
 # 配置Dameng META以供JDBCMeta读取
 
 # 驱动类
-driver_class=dm.jdbc.driver.DmDriver
+driver_class=oracle.jdbc.driver.OracleDriver
 
 # 默认数据库
-default_database=SYSDBA
+default_database=ORCL
 
 # 系统数据库，用于过滤
-system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
+system_databases=SYS,SYSTEM,PDBADMIN,SYSRAC,XS$NULL,GSMCATUSER,MDDATA,SYSBACKUP,REMOTE_SCHEDULER_AGENT,GSMUSER,OJVMSYS,DIP,LBACSYS,SYSKM,DGPDB_INT,OUTLN,SYS$UMF,SYSDG,DBSNMP,APPQOSSYS,VECSYS,DBSFWUSER,GGSYS,ANONYMOUS,CTXSYS,DVSYS,DVF,AUDSYS,GSMADMIN_INTERNAL,GGSHAREDCAP,OLAPSYS,MDSYS,XDB,WMSYS
 
 # 用于包裹表名和字段名的引号
 quote="
 
-# 删除数据库的SQL语句
-drop_database_statement=DROP SCHEMA IF EXISTS %s cascade;
-
-# 创建数据库
-create_database_statement=CREATE SCHEMA %s;
+support_create_database=false
 
 # 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+
+drop_table_statement=DROP TABLE IF EXISTS %s
 
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
@@ -51,7 +49,7 @@ alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
 
 # 查询表数据（无主键）
-query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
 
 # 插入表数据
 insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
@@ -60,7 +58,7 @@ insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
 update_table_statement = UPDATE %s SET %s WHERE %s = %s
 
 # 删除表数据（这里保留 NULL 处理方式）
-delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
+delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d)
 
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
@@ -72,7 +70,9 @@ upsert_statement = WHEN MATCHED THEN UPDATE SET
 upsert_conflict_statement= %s.%s = source.%s
 
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
+database_query_sql=SELECT DISTINCT SUBSTR(table_name, 1, INSTR(table_name, '.') - 1) AS DATNAME FROM user_tables WHERE table_name LIKE 'unit%.%'
+
+dummy_database_query_sql=SELECT DISTINCT owner AS DATNAME FROM all_tables
 
 # 是否支持full join
 is_support_full_join=true
@@ -85,6 +85,8 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
+
+jdbc_support_get_table_name_from_result_set=false
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
@@ -99,5 +101,5 @@ DECIMAL=IGinX-DOUBLE
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
-IGinX-BOOLEAN=TINYINT
-IGinX-LONG=BIGINT
+IGinX-BOOLEAN=NUMBER(1)
+IGinX-LONG=NUMBER(19)
