--- a/.github/actions/service/freeThreadConda/action.yml
+++ b/.github/actions/service/freeThreadConda/action.yml
@@ -27,12 +27,13 @@ runs:
               python -VV
               python -c "import sys;print(sys._is_gil_enabled())"
               curl -L -O https://github.com/IGinX-THU/IGinX-resources/raw/refs/heads/main/resources/python/pandas-3.0.0.dev0+1654.g32a97a969a-cp313-cp313t-win_amd64.whl
+              curl -L -O https://github.com/IGinX-THU/IGinX-resources/raw/refs/heads/main/resources/python/pemjax-0.2.1.tar.gz
               ls -l
               if [ "$RUNNER_OS" == "Windows" ]; then
                python -m pip install numpy thrift
-               python -m pip install resources/pemjax-0.2.1.tar.gz
+               python -m pip install pemjax-0.2.1.tar.gz
                python -m pip install pandas*.whl
               else
                python -m pip install pandas==2.2.3 numpy thrift
-               python -m pip install resources/pemjax-0.2.1.tar.gz
+               python -m pip install pemjax-0.2.1.tar.gz
               fi
