fix(relational): the database of dameng connection convert from schema into user

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -24,7 +24,7 @@
 driver_class=dm.jdbc.driver.DmDriver
 
 # 默认数据库
-default_database=SYSDBA
+default_database=DAMENG
 
 # 系统数据库，用于过滤
 system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
@@ -32,11 +32,13 @@ system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
 # 用于包裹表名和字段名的引号
 quote="
 
+support_create_database=false
+
 # 删除数据库的SQL语句
-drop_database_statement=DROP SCHEMA IF EXISTS %s cascade;
+#drop_database_statement=DROP SCHEMA IF EXISTS %s cascade;
 
 # 创建数据库
-create_database_statement=CREATE SCHEMA %s;
+#create_database_statement=CREATE SCHEMA %s;
 
 # 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
