fix(relational): fix drop table

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -43,6 +43,8 @@ support_create_database=false
 # 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
 
+drop_table_statement=DROP TABLE IF EXISTS %s
+
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
 
