fix(relational): fix drop table

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -78,6 +78,8 @@ upsert_conflict_statement= %s.%s = source.%s
 # 获取数据库列表的SQL语句
 database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
 
+dummy_database_query_sql=SELECT DISTINCT owner AS DATNAME FROM all_tables
+
 # 是否支持full join
 is_support_full_join=true
 
@@ -89,6 +91,8 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
+
+jdbc_support_get_table_name_from_result_set=false
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
